force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/AssignmentNote__c.field-meta.xml
<CustomField>
    <fullName>AssignmentNote__c</fullName>
    <label>Opmerking bij toewijzing</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Opmerking bij toewijzing</labelOverride>
        <masterLabel>Opmerking bij toewijzing</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>