force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Contains_Work_Instruction_c__c.field-meta.xml
<CustomField>
    <fullName>Contains_Work_Instruction_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Work Instruction</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Contains Work Instruction</labelOverride>
        <masterLabel>Contains Work Instruction</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>