force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Text_c__c.field-meta.xml
<CustomField>
    <fullName>Text_c__c</fullName>
    <label>Text</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Text</labelOverride>
        <masterLabel>Text</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>