force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Web_Answer_c__c.field-meta.xml
<CustomField>
    <fullName>Web_Answer_c__c</fullName>
    <label>Web Answer</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Web Answer</labelOverride>
        <masterLabel>Web Answer</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>