force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Work_Instruction_c__c.field-meta.xml
<CustomField>
    <fullName>Work_Instruction_c__c</fullName>
    <label>Work Instruction</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Work Instruction</labelOverride>
        <masterLabel>Work Instruction</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>